if(NOT TARGET Lib_LibLidarLms151)
      message(STATUS "Library_LibLidarLms151 : To be constructed ")
   add_subdirectory(Library_LibLidarLms151 build_Lms151)
endif()
if(NOT TARGET Lib_CanOpen)
      message(STATUS "Library_CanOpen : To be constructed ")
	  add_subdirectory(Protocol_CanOpen build_Canopen)
endif() 
if(NOT TARGET Lib_StdLib)
      message(STATUS "Library_StdLib : To be constructed ")
	  add_subdirectory(Library_StdLib build_StdLib)
endif() 
